--- a/css/Layout.scss
+++ b/css/Layout.scss
@@ -1440,9 +1440,9 @@ form{
   height: 100%;
   overflow: auto;
   grid-gap: 0px;
-  
+  text-transform: uppercase;
   grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: 36px 36px auto 36px;
+  grid-template-rows: 36px 36px 1fr 1fr 36px;
   background-color: #52565a;
   >*{
     overflow: auto;
@@ -1468,20 +1468,20 @@ form{
     grid-row: 2;  
     grid-column: 3/4;
     
-    //background-color: rgb(49, 190, 37);
+    background-color: rgb(49, 190, 37);
   }
   .p5 {
     grid-row: 2;  
     grid-column: 4/5;
     
-    //background-color: rgba(39, 39, 39, 1.0);
+    background-color: rgb(183, 190, 73);
   }
 
   .p4 {
-    grid-row: 3;  
+    grid-row: 3/5;  
     grid-column: 1/3;
     
-    //background-color: rgb(146, 101, 101);
+    background-color: rgb(146, 101, 101);
   }
   .p6 {
     grid-row: 3;  
@@ -1497,12 +1497,12 @@ form{
   }
   .p8 {
     grid-row: 4;  
-    grid-column: 1/3;
+    grid-column: 3/4;
     
-    background-color: rgb(0, 141, 129);
+    background-color: rgb(80, 24, 126);
   }
   .p9 {
-    grid-row: 4;  
+    grid-row: 5;  
     grid-column: 3/4;
     
     background-color: rgb(0, 141, 129);
@@ -1511,7 +1511,24 @@ form{
     grid-row: 4;  
     grid-column: 4/5;
     
-    background-color: rgb(0, 141, 129);
+    background-color: rgb(235, 106, 196);
   }
   
+}
+
+
+
+.subwin{
+
+  display: flex;
+  flex-direction: row;
+  >:nth-child(2){
+    flex: 1 1 auto;
+  }
+  >:nth-child(1){
+    flex: 0 0 200px;
+
+  }
+
+
 }
