--- a/css/Menu.scss
+++ b/css/Menu.scss
@@ -86,14 +86,14 @@
 			
 		}
 	}
-	&.type-accordion, &.type-accordionx, &.type-accordiony{
+	&.type-accordion, &.menu-accordion, &.type-accordionx, &.type-accordiony{
 		
 		.submenu{
 			padding:0px;
 			margin:0px;
 			margin-left: 16px;
 			li{
-				background-color: rgba(91,91,91,0.05);
+				background-color: rgb(224, 20, 20);
 
 			}
 			
@@ -113,7 +113,7 @@
 			
 			max-height: 0px;
 			overflow: hidden;
-			padding-left: 30px;
+			padding-left: 10px;
 			opacity: 0;
 			
 			transition-duration: 0.2s;
