--- a/css/Layout.css
+++ b/css/Layout.css
@@ -1,3 +1,11 @@
+@font-face {
+  font-family: Hemihead;
+  src: url(../../../fonts/HEMIHEAD.TTF);
+}
+@font-face {
+  font-family: airstrike;
+  src: url(../fonts/airstrike.ttf);
+}
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -384,7 +392,7 @@ div[data-sg-type=sg-ajax]:not(.isie) {
 .sgWin.sevian.hidden {
   visibility: hidden;
 }
-.sgWin.sevian.hidden * {
+.sgWin.sevian.hidden > .body > * {
   display: none;
 }
 .sgWin.sevian > .caption {
@@ -1347,4 +1355,37 @@ form {
   -webkit-box-flex: 0;
       -ms-flex: 0 0 200px;
           flex: 0 0 200px;
+}
+
+.gtlogo > .text {
+  color: #ffe7e7;
+  font-family: airstrike;
+  font-size: 30pt;
+}
+.gt-login {
+  display: grid;
+  height: 100%;
+  overflow: auto;
+  grid-gap: 20px;
+  text-transform: uppercase;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: 36px 36px 1fr 1fr 36px;
+  background-image: url(../images/wallpaper/2020-001.png);
+}
+.gt-login .p1 {
+  grid-row: 1;
+  grid-column: 1/5;
+  background-color: rgba(128, 128, 128, 0.62);
+  background-position: center center;
+  background-size: 100% 100%;
+  text-align: right;
+}
+.gt-login .p3 {
+  grid-row: 2;
+  grid-column: 4/5;
+}
+
+.user-menu img {
+  width: 20px;
+  margin: 5px;
 }
