--- a/css/Layout.css
+++ b/css/Layout.css
@@ -1389,3 +1389,34 @@ form {
   width: 20px;
   margin: 5px;
 }
+
+.gt-main {
+  display: grid;
+  height: 100%;
+  overflow: auto;
+  grid-gap: 10px;
+  text-transform: uppercase;
+  grid-template-columns: 1fr;
+  grid-template-rows: 36px 1fr;
+  background-image: url(../images/wallpaper/2020-001.png);
+}
+.gt-main .p1 {
+  grid-row: 1;
+  grid-column: 1/3;
+  background-color: rgba(128, 128, 128, 0.62);
+  background-position: center center;
+  background-size: 100% 100%;
+  text-align: right;
+}
+.gt-main .p4 {
+  grid-row: 2;
+  grid-column: 1/3;
+}
+.gt-main > * {
+  overflow: auto;
+  height: 100%;
+}
+.gt-main > * > form {
+  height: 100%;
+  overflow: auto;
+}
