--- a/css/Layout.scss
+++ b/css/Layout.scss
@@ -1603,3 +1603,46 @@ form{
     margin:5px;
   }
 }
+
+.gt-main{
+
+  display: grid;
+  height: 100%;
+  overflow: auto;
+  grid-gap: 10px;
+  text-transform: uppercase;
+  grid-template-columns: 1fr;
+  grid-template-rows: 36px 1fr;
+  background-image: url(../images/wallpaper/2020-001.png);
+
+  .p1 {
+    grid-row: 1;  
+    grid-column: 1 / 3;
+    //background-image: url(../images/wallpaper/2020-006.jpg);
+    background-color: rgba(128, 128, 128, 0.62);
+    background-position: center center;
+    background-size: 100% 100%;
+    //border: 10px solid white;
+    //margin-left: 20px;
+    //opacity: 0.6;
+    text-align: right;
+  }
+
+  .p4 {
+    grid-row: 2;  
+    grid-column: 1 / 3;
+
+    //background-color: rgb(128, 128, 128);
+  }
+
+  >*{
+    overflow: auto;
+    height: 100%;
+   
+    >form{
+      
+      height: 100%;
+      overflow: auto;
+    }
+  }
+}
