--- a/css/Layout.scss
+++ b/css/Layout.scss
@@ -1058,7 +1058,7 @@ $delta_y_h: -240px;
 }
 
 
-.sg-map{
+.sg-map, .leatflet-map{
   height: 100%;
 
   .leaflet-control-attribution.leaflet-control{
