--- a/css/Layout.css
+++ b/css/Layout.css
@@ -1442,3 +1442,35 @@ form {
   padding: 10px;
   font-family: "Open Sans", sans-serif;
 }
+
+.map-main {
+  display: grid;
+  height: 100%;
+  overflow: auto;
+  grid-gap: 2px;
+  text-transform: uppercase;
+  grid-template-columns: 200px 1fr;
+  grid-template-rows: 36px 1fr;
+}
+.map-main .map-menu {
+  grid-row: 1;
+  grid-column: 1/3;
+  border: 2px solid red;
+  height: 100%;
+}
+.map-main .map-items {
+  grid-row: 2;
+  grid-column: 1/2;
+  border: 2px solid #51a340;
+  height: 100%;
+}
+.map-main .map-body {
+  grid-row: 2;
+  grid-column: 2/3;
+  border: 2px solid #af6c6c;
+  height: 100%;
+}
+
+.sg-menu span.text {
+  font-size: 8px;
+}
