--- a/css/sgTab.css
+++ b/css/sgTab.css
@@ -20,11 +20,9 @@
       -ms-user-select: none;
           user-select: none;
 }
-
 .sg-tab > .menu > .tab-menu.tab-active {
   background-color: red;
 }
-
 .sg-tab > .body > .tab-body:not(.tab-active) {
   display: none !important;
 }
@@ -44,7 +42,6 @@
           flex-direction: column;
   overflow: auto;
 }
-
 .sg-tab_ > .tab-menu {
   -webkit-box-flex: 0;
       -ms-flex: 0 0 auto;
@@ -64,7 +61,6 @@
       flex-wrap: wrap;
   font-size: 9pt;
 }
-
 .sg-tab_ > .tab-menu > * {
   white-space: nowrap;
   overflow: hidden;
@@ -89,11 +85,9 @@
   /* Likely future */
   border-radius: 4px 12px 0px 0px;
 }
-
 .sg-tab_ > .tab-menu > *.tab-active {
   background-color: #cc530d;
 }
-
 .sg-tab_ > .tab-body {
   -webkit-box-flex: 1;
       -ms-flex: 1 1 auto;
@@ -105,15 +99,12 @@
   display: -ms-flexbox;
   display: flex;
 }
-
 .sg-tab_ > .tab-body > div {
   border: 4px solid red;
 }
-
 .sg-tab_ > .tab-body > div:not(.tab-active) {
   display: none;
 }
-
 .sg-tab_ > .tab-body > div.tab-active {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -121,7 +112,6 @@
   overflow: auto;
   border: 4px solid red;
 }
-
 .sg-tab_ > .tab-body > div.tab-active > * {
   -webkit-box-flex: 1;
       -ms-flex: 1 1 auto;
@@ -129,4 +119,28 @@
   overflow: auto;
   border: 4px solid #a33582;
 }
-/*# sourceMappingURL=sgTab.css.map */
+
+.sg-accordion > .menu > .tab-menu {
+  width: 100%;
+  display: inline-block;
+  background-color: #6f6f6f;
+  text-decoration: none;
+  color: white;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis "...";
+  -webkit-box-sizing: padding-box;
+          box-sizing: padding-box;
+  padding: 4px 10px 4px 10px;
+  cursor: pointer;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+.sg-accordion > .menu > .tab-menu.tab-active {
+  background-color: red;
+}
+.sg-accordion > .menu > .tab-body:not(.tab-active) {
+  display: none !important;
+}
