--- a/css/Layout.css
+++ b/css/Layout.css
@@ -1244,7 +1244,6 @@ form {
   display: grid;
   height: 100%;
   overflow: auto;
-  grid-gap: 10px;
   text-transform: uppercase;
   grid-template-columns: 1fr;
   grid-template-rows: 36px 1fr;
@@ -1279,7 +1278,6 @@ form {
 #menu {
   position: absolute;
   background: #fff;
-  padding: 10px;
   font-family: "Open Sans", sans-serif;
 }
 
@@ -1287,36 +1285,47 @@ form {
   display: grid;
   height: 100%;
   overflow: auto;
-  grid-gap: 2px;
   text-transform: uppercase;
   grid-template-columns: 200px 200px 1fr;
   grid-template-rows: 36px 1fr;
+  /*
+  .map-items{
+    //margin:10px;
+    grid-row: 2;  
+    grid-column: 1 / 2;
+    border:2px solid rgb(81, 163, 64);
+    height: 100%;
+    overflow: auto;
+    z-index: 2;
+    background-color: rgba(116, 116, 116, 0.562);
+  }
+  */
 }
 .map-main .map-menu {
   grid-row: 1;
   grid-column: 1/5;
-  border: 2px solid red;
+  background-color: rgba(4, 41, 252, 0.103);
   height: 100%;
-}
-.map-main .map-items {
-  grid-row: 2;
-  grid-column: 1/2;
-  border: 2px solid #51a340;
-  height: 100%;
-  overflow: auto;
   z-index: 2;
-  background-color: rgba(116, 116, 116, 0.562);
 }
 .map-main .map-body {
-  grid-row: 2;
+  grid-row: 1/3;
   grid-column: 1/5;
-  border: 2px solid #af6c6c;
   height: 100%;
   z-index: 1;
 }
 
+.sg-menu .caption span.text {
+  font-size: 10px;
+}
 .sg-menu span.text {
-  font-size: 8px;
+  font-size: 10px;
+}
+.sg-menu .icon {
+  display: none;
+}
+.sg-menu .submenu {
+  overflow: hidden;
 }
 
 .win-events {
@@ -1326,4 +1335,24 @@ form {
   font-size: 0.6em;
   padding: 4px;
   text-transform: uppercase;
+}
+
+.units-info {
+  padding: 2px;
+  color: white;
+  font-size: 11px;
+  min-width: 240px;
+  display: grid;
+  height: 100%;
+  overflow: auto;
+  text-transform: uppercase;
+  grid-template-columns: auto 1fr;
+}
+.units-info > div {
+  background-color: rgba(109, 0, 33, 0.493);
+  padding: 3px;
+}
+.units-info > div:nth-child(2n+1) {
+  color: #929292;
+  font-weight: bold;
 }
