--- a/css/sgTab.css
+++ b/css/sgTab.css
@@ -1,4 +1,62 @@
 /* Scss Document */
+@-webkit-keyframes ac_open {
+  0% {
+    opacity: 0;
+    -webkit-transform: scale(0.5);
+            transform: scale(0.5);
+    -webkit-transform-origin: 0 0;
+            transform-origin: 0 0;
+    max-height: 0px;
+  }
+  100% {
+    max-height: 600px;
+    opacity: 1;
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    -webkit-transform-origin: 0 0;
+            transform-origin: 0 0;
+  }
+}
+@keyframes ac_open {
+  0% {
+    opacity: 0;
+    -webkit-transform: scale(0.5);
+            transform: scale(0.5);
+    -webkit-transform-origin: 0 0;
+            transform-origin: 0 0;
+    max-height: 0px;
+  }
+  100% {
+    max-height: 600px;
+    opacity: 1;
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    -webkit-transform-origin: 0 0;
+            transform-origin: 0 0;
+  }
+}
+@-webkit-keyframes ac_close {
+  0% {
+    opacity: 1;
+    max-height: 600px;
+  }
+  100% {
+    opacity: 0;
+    max-height: 0px;
+    overflow: hidden;
+  }
+}
+@keyframes ac_close {
+  0% {
+    opacity: 1;
+    max-height: 600px;
+  }
+  100% {
+    opacity: 0;
+    max-height: 0px;
+    overflow: hidden;
+  }
+}
 .sg-tab > .menu > .tab-menu {
   display: inline-block;
   background-color: #6f6f6f;
@@ -123,7 +181,7 @@
 .sg-accordion > .menu > .tab-menu {
   width: 100%;
   display: inline-block;
-  background-color: #6f6f6f;
+  background-color: rgba(111, 111, 111, 0.103);
   text-decoration: none;
   color: white;
   white-space: nowrap;
@@ -139,8 +197,14 @@
           user-select: none;
 }
 .sg-accordion > .menu > .tab-menu.tab-active {
-  background-color: red;
+  background-color: rgba(255, 0, 0, 0.164);
+}
+.sg-accordion > .menu > .tab-body.tab-active {
+  -webkit-animation: ac_open 0.5s ease-out forwards;
+          animation: ac_open 0.5s ease-out forwards;
+  color: yellow;
 }
 .sg-accordion > .menu > .tab-body:not(.tab-active) {
-  display: none !important;
+  -webkit-animation: ac_close 0.1s ease-out forwards;
+          animation: ac_close 0.1s ease-out forwards;
 }
