--- a/css/Layout.css
+++ b/css/Layout.css
@@ -1356,3 +1356,58 @@ form {
   color: #929292;
   font-weight: bold;
 }
+
+@-webkit-keyframes pulse {
+  0% {
+    -webkit-box-shadow: 0 0 0 0 rgba(235, 0, 0, 0.6);
+            box-shadow: 0 0 0 0 rgba(235, 0, 0, 0.6);
+    border-width: 2px;
+  }
+  70% {
+    -webkit-box-shadow: 0 0 0 30px rgba(235, 0, 0, 0);
+            box-shadow: 0 0 0 30px rgba(235, 0, 0, 0);
+    border-width: 4px;
+  }
+  100% {
+    -webkit-box-shadow: 0 0 0 0 rgba(235, 0, 0, 0);
+            box-shadow: 0 0 0 0 rgba(235, 0, 0, 0);
+    border-width: 4px;
+  }
+}
+
+@keyframes pulse {
+  0% {
+    -webkit-box-shadow: 0 0 0 0 rgba(235, 0, 0, 0.6);
+            box-shadow: 0 0 0 0 rgba(235, 0, 0, 0.6);
+    border-width: 2px;
+  }
+  70% {
+    -webkit-box-shadow: 0 0 0 30px rgba(235, 0, 0, 0);
+            box-shadow: 0 0 0 30px rgba(235, 0, 0, 0);
+    border-width: 4px;
+  }
+  100% {
+    -webkit-box-shadow: 0 0 0 0 rgba(235, 0, 0, 0);
+            box-shadow: 0 0 0 0 rgba(235, 0, 0, 0);
+    border-width: 4px;
+  }
+}
+.marker-alpha {
+  -webkit-transform: scale(1);
+          transform: scale(1);
+  display: block;
+  width: 30px;
+  height: 30px;
+  border-radius: 100%;
+  border: 4px solid white;
+  background: #d60000;
+  cursor: pointer;
+  -webkit-box-shadow: 0 0 5 rgba(246, 37, 253, 0.4);
+          box-shadow: 0 0 5 rgba(246, 37, 253, 0.4);
+  -webkit-animation: pulse 1.2s infinite ease-out;
+          animation: pulse 1.2s infinite ease-out;
+}
+
+.mm {
+  color: #ffa53e;
+}
