--- a/css/Layout.scss
+++ b/css/Layout.scss
@@ -1611,3 +1611,46 @@ form{
 
 
   }
+  
+  
+  
+  @keyframes pulse {
+    0% {
+      //-moz-box-shadow: 0 0 0 0 rgba(204,169,44, 0.4);
+      box-shadow: 0 0 0 0 rgba(235, 0, 0, 0.6);
+      border-width: 2px;
+      //transform: scale(0.95);
+      
+    }
+    70% {
+        //-moz-box-shadow: 0 0 0 10px rgba(204,169,44, 0);
+        box-shadow: 0 0 0 30px  rgba(235, 0, 0, 0.0);
+        border-width: 4px;
+        //transform: scale(1.0);
+    }
+    100% {
+        //-moz-box-shadow: 0 0 0 0 rgba(204,169,44, 0.6);
+        box-shadow: 0 0 0 0  rgba(235, 0, 0, 0);
+        border-width: 4px;
+    }
+  }
+
+  .marker-alpha{
+    //transform-origin: 0% 0%;
+    transform: scale(1);
+    //margin:100px;
+    display: block;
+    width: 30px;
+    height: 30px;
+    border-radius: 100%;
+    border:4px solid rgb(255, 255, 255);
+    background: #d60000;
+    cursor: pointer;
+    box-shadow: 0 0 5 rgba(246, 37, 253, 0.4);
+    animation: pulse 1.2s infinite ease-out;
+
+  }
+
+  .mm{
+    color:rgb(255, 165, 62);
+  }
