--- a/css/Layout.scss
+++ b/css/Layout.scss
@@ -1654,3 +1654,13 @@ form{
   .mm{
     color:rgb(255, 165, 62);
   }
+
+
+  #debug_1{
+    background-color: rgba(255, 255, 255, 1.0);
+    
+    >*{
+      color:white;
+    }
+    
+  }
