--- a/css/Layout.scss
+++ b/css/Layout.scss
@@ -763,7 +763,7 @@ div[data-sg-type=sg-ajax]{
 .sg-grid{
   font-size: 9pt;
 
-  height: 100%;
+  //height: 100%;
   //border:2px solid #52565a;
   overflow: auto;
   display: flex;
