--- a/css/gt.css
+++ b/css/gt.css
@@ -11,11 +11,11 @@
 }
 .gt form > * > * {
   overflow: auto;
-  border: 4px solid blue;
+  border: 0px solid blue;
 }
 .gt form > * > * > * {
   overflow: auto;
-  border: 4px solid #a04cb9;
+  border: 0px solid #a04cb9;
 }
 .gt > .body {
   height: 100%;
@@ -32,7 +32,7 @@
   -webkit-box-flex: 1;
       -ms-flex: 1 1 50%;
           flex: 1 1 50%;
-  border: 4px solid red;
+  border: 4px solid #686868;
   margin: 10px;
   overflow: auto;
 }
