--- a/css/gt.scss
+++ b/css/gt.scss
@@ -1,4 +1,14 @@
 .gt{
+
+	.btn-connect{
+		background-color: rgb(69, 253, 69);
+		color: rgb(4, 114, 72)!important;
+		//border:outset !important;
+		padding-right: 6px!important;
+		padding-left: 6px!important;
+		text-align: center;
+
+	}
 	form{
 		overflow: auto;
 		>*{
