--- a/css/gt.css
+++ b/css/gt.css
@@ -3,6 +3,13 @@
   height: 100%;
   background-color: #8fa1bb;
 }
+.gt .btn-connect {
+  background-color: #45fd45;
+  color: #047248 !important;
+  padding-right: 6px !important;
+  padding-left: 6px !important;
+  text-align: center;
+}
 .gt form {
   overflow: auto;
 }
