--- a/css/gt.scss
+++ b/css/gt.scss
@@ -1,4 +1,35 @@
 .gt{
+	width: 100%;
+	height: 100%;
+	background-color: rgb(143, 161, 187);
+	overflow: auto;
+
+	._body{
+		height: 100%;
+		border:2px solid green;
+		padding: 10px;
+		overflow: auto;
+		>*{
+			border:3px solid rgb(8, 102, 179);
+			margin:2px;
+			padding: 3px;
+			display: block;
+			min-height: 20px;
+			min-width: 40px;
+			max-height: 300px;
+			overflow: scroll;
+			>*{
+				border:2px solid rgb(218, 7, 130);
+				overflow: auto;
+				max-height: 200px;
+			}
+		}
+	}
+
+	.sg-form{
+		//height: 200px;
+	}
+
 
 	.btn-connect{
 		background-color: rgb(69, 253, 69);
@@ -9,8 +40,13 @@
 		text-align: center;
 
 	}
+
 	form{
+		//border:2px solid red;
+	}
+	fform{
 		overflow: auto;
+		border: 2px solid rgb(99, 160, 0);
 		>*{
 			overflow: auto;
 			
@@ -24,15 +60,14 @@
 			}
 		}
 	}
-	width: 100%;
-	height: 100%;
-	background-color: rgb(143, 161, 187);
+	
 	>.body{
 		height: 100%;
 		width: 100%;
 		//background-color: rgb(197, 197, 197);
 		display: flex;
 		flex-direction: row;
+		overflow: auto;
 		>*{
 			flex: 1 1 50%;
 			border:4px solid rgb(104, 104, 104);
