--- a/css/gt.scss
+++ b/css/gt.scss
@@ -69,10 +69,13 @@
 		flex-direction: row;
 		overflow: auto;
 		>*{
-			flex: 1 1 50%;
+			flex: 1 1 auto;
 			border:4px solid rgb(104, 104, 104);
 			margin: 10px;
 			overflow: auto;
+		}
+		.p5{
+			display: none;
 		}
 		
 		.gt-command-4{
