--- a/css/gt.css
+++ b/css/gt.css
@@ -61,11 +61,14 @@
 }
 .gt > .body > * {
   -webkit-box-flex: 1;
-      -ms-flex: 1 1 50%;
-          flex: 1 1 50%;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
   border: 4px solid #686868;
   margin: 10px;
   overflow: auto;
+}
+.gt > .body .p5 {
+  display: none;
 }
 .gt .command_name {
   color: #474747;
